# plexus-mesh

./: README.md
.github/workflows/: ci.yml  release.yml  test.yml
plexus-ai/: Cargo.toml
plexus-ai/src/: lance_store.rs  lib.rs
plexus-p2p/: Cargo.toml
plexus-p2p/src/: node_service.rs
plexus-p2p/tests/: crdt_test.rs
