[package]
name = "plexus-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
anyhow.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }

# AI Framework (Candle)
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.19"
hf-hub = { version = "0.4.3", features = ["tokio"] }
serde_json.workspace = true
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
qdrant-client = "1.16.0"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
sha2 = "0.10"
hex = "0.4"
lancedb = { version = "0.23.1", optional = true }
arrow-array = { version = "56.2.0", optional = true }
arrow-schema = { version = "56.2.0", optional = true }
futures.workspace = true

[features]
default = []
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
vulkan = []

[dev-dependencies]
tempfile = "3.24.0"
