[package]
name = "plexus-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
plexus-core = { path = "../plexus-core" }
plexus-ai = { path = "../plexus-ai" }
libp2p.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
rand.workspace = true
base64.workspace = true
futures = "0.3"
sysinfo = "0.38.0"
serde_json.workspace = true
crdts = "7.3.2"
sled = "0.34"
directories-next = "2.0"
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
proptest = "1.0"
tempfile = "3.24.0"
